2019-06-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate menu items using the theme file.

2019-06-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create combo-boxes using the theme file.

2019-06-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* combo-box layout managers: renamed selection_changed() to
	on_selection_changed() to be consistent with the list layout managers.
	Disable the inherited selection_type() and on_selection_changed()
	callbacks that are inherited from the list layout manager.

2019-06-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add list layout manager methods that replace list's initial
	callbacks.

	* Create list containers using the theme file.

2019-06-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager: replace new_items{} parameter with get_new_items{}
	and return the new listhandlers directly.

2019-06-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager: implement on_status_update().

0.24.0

2019-06-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <scrollbar> using the theme file.

2019-06-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <font_picker> and <color_picker> using the theme file.

2019-06-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* date_input_field/date_input_field.C: allow empty date input
	field, don't treat it as an error condition. "No date entered" is
	already a valid value in the date input field.

	* Create <progressbar>s using the theme file.

2019-06-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <radio>s using the theme file.

2019-06-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <checkbox>es using the theme file.

	* Create <image>s using the theme file.

2019-06-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <date_input_field>s using the theme file.

2019-06-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <input_field>s using the theme file.

2019-06-02  Sam Varshavchik  <mrsam@courier-mta.com>
